<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fitsSystemWindows="true"
    android:scrollbars="none"
    tools:context=".activity.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imgCarrot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:src="@drawable/ic_carrot" />

        <TextView
            android:id="@+id/demo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/imgCarrot"
            android:layout_centerHorizontal="true"
            android:layout_margin="3dp"
            android:lineSpacingExtra="1sp"
            android:text="@string/demo"
            android:textAppearance="@style/demo"
            android:translationY="-0.47sp" />

        <LinearLayout
            android:id="@+id/rectangle_1"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_below="@id/demo"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="15dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/rectangle_1"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="12dp"
                android:layout_marginLeft="12dp"
                android:src="@drawable/ic_search" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="12dp"
                android:layout_marginLeft="12dp"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:background="@android:color/transparent"
                android:hint="@string/search_store"
                android:maxLines="1"
                android:textColor="#7C7C7C"
                android:textColorHint="#7C7C7C" />
        </LinearLayout>

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:id="@+id/coordinator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/rectangle_1"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="15dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="15dp">

            <androidx.viewpager.widget.ViewPager
                android:id="@+id/viewPager"
                android:layout_width="match_parent"
                android:layout_height="115dp"
                android:layout_marginBottom="10dp" />

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/indicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center"
                android:layout_marginBottom="-5dp"
                android:background="@android:color/transparent"
                android:clipToPadding="false"
                android:padding="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:tabBackground="@drawable/tab_selector"
                app:tabIndicatorHeight="0dp"
                app:tabPadding="0dp"
                app:tabRippleColor="@null" />

        </androidx.coordinatorlayout.widget.CoordinatorLayout>

        <RelativeLayout
            android:id="@+id/rl1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/coordinator"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp">

            <TextView
                android:id="@+id/exclusive_o"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_toStartOf="@id/seellExclusiveOffer"
                android:layout_toLeftOf="@id/seellExclusiveOffer"
                android:text="@string/exclusive_o"
                android:textAppearance="@style/exclusive_o" />

            <TextView
                android:id="@+id/seellExclusiveOffer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:text="@string/see_all"
                android:textAppearance="@style/see_all"
                tools:targetApi="m" />
        </RelativeLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvExclusiveOffer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/rl1"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp" />

        <RelativeLayout
            android:id="@+id/rl2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/rvExclusiveOffer"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp">

            <TextView
                android:id="@+id/groceries"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_toStartOf="@id/seeAllGroceries"
                android:layout_toLeftOf="@id/seeAllGroceries"
                android:text="@string/groceries"
                android:textAppearance="@style/exclusive_o" />

            <TextView
                android:id="@+id/seeAllGroceries"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="?selectableItemBackground"
                android:foreground="?android:attr/selectableItemBackground"
                android:text="@string/see_all"
                android:textAppearance="@style/see_all"
                tools:targetApi="m" />
        </RelativeLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvGroceries"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/rl2"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp" />

        <RelativeLayout
            android:id="@+id/rl3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/rvGroceries"
            android:layout_centerHorizontal="true"
            android:layout_margin="15dp">

            <TextView
                android:id="@+id/bestSelling"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_toStartOf="@id/seeBestSelling"
                android:layout_toLeftOf="@id/seeBestSelling"
                android:text="@string/best_selling"
                android:textAppearance="@style/exclusive_o" />

            <TextView
                android:id="@+id/seeBestSelling"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="?selectableItemBackground"
                android:foreground="?android:attr/selectableItemBackground"
                android:text="@string/see_all"
                android:textAppearance="@style/see_all"
                tools:targetApi="m" />
        </RelativeLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvBestSelling"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/rl3"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="15dp" />


    </RelativeLayout>
</ScrollView>